test/files/neg/t11575b.check
LocalImpl.scala:2: error: incompatible type in overriding
private[package <empty>] var counts: Array[Int] (defined in class Cover);
 found   : String
 required: Array[Int]
    override var counts: String = ""
                 ^
one error found
